refactor: 优化代码质量，清理无用导入并改进类型安全
- 移除多余的无用导入语句，清理代码
- 为多个DTO类添加@EqualsAndHashCode注解确保正确实现
- 改进TreeModel等类的泛型类型定义，增强类型安全性
- 优化线程池配置和资源管理，修复潜在问题
- 重构部分工具类方法，提高代码健壮性
- 更新缓存相关实现，统一泛型使用
- 修复IDE警告和代码风格问题